Update composer.json to include PSR-3 logging library

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         }
     },
     "require": {
-        "guzzlehttp/guzzle": "^7.5"
+        "guzzlehttp/guzzle": "^7.5",
+        "psr/log": "^3.0"
     }
 }
